Fix github workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,6 @@
 name: Test
 
-on:
-  push:
-    branches: [ master ]
+on: [push]
 
 jobs:
   go-test:
@@ -14,6 +12,5 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
-        run: go get .
       - name: test
         run: go test -v ./...
