--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,13 +4,15 @@ on: [push]
 
 jobs:
   go-test:
-    name: go-test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: set up go
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
+      - name: checkout the code
+        uses: actions/checkout@v2
+      - name: check format
+        run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
       - name: test
         run: go test -v ./...
